<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".CreatActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginTop="80dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/creat_ac_txt"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/urbanist_extrabold"
        android:gravity="fill_vertical"
        android:text="@string/create_new_account"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/creat_mail_input"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_mail"
        android:drawableStart="@drawable/email_24"
        android:drawablePadding="10dp"
        android:gravity="fill_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/creat_ac_txt"
        tools:ignore="RtlSymmetry,TextViewEdits,UseCompatTextViewDrawableXml" />

    <TextView
        android:id="@+id/creat_input"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_mail"
        android:drawableStart="@drawable/fingerprint_24"
        android:drawablePadding="10dp"
        android:gravity="fill_vertical"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:paddingStart="20dp"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/creat_mail_input"
        tools:ignore="RtlSymmetry,TextViewEdits,UseCompatTextViewDrawableXml" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:fontFamily="@font/urbanist_extrabold"
        android:gravity="fill_vertical"
        android:text="@string/or_continue_with"
        android:textAlignment="center"
        android:textSize="18sp"
        android:drawableEnd="@drawable/line"
        android:drawableStart="@drawable/line"
        app:layout_constraintTop_toBottomOf="@+id/chkbx_btn"
        tools:ignore="RtlCompat,UseCompatTextViewDrawableXml"
        tools:layout_editor_absoluteX="0dp" />

    <CheckBox
        android:id="@+id/chkbx_btn"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:buttonTint="#3B52D5"
        android:text="Remember me"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/creat_input"
        tools:layout_editor_absoluteX="-20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>