<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:tooltipText="facebook">
    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:adjustViewBounds="false"
        android:clickable="true"
        android:contextClickable="true"
        android:cropToPadding="false"
        android:onClick="back"
        android:scaleType="fitStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/splash_img"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="62dp"
        android:importantForAccessibility="no"
        android:src="@drawable/frame_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="58dp"
        android:layout_marginTop="20dp"
        android:text="@string/let_s_you_in"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_img" />

    <TextView
        android:id="@+id/btn_facebook"
        android:onClick="facebook_ac"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login"
        android:drawablePadding="20dp"
        android:gravity="fill_vertical"
        android:paddingStart="80dp"
        android:text="@string/facebook_txt"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/social_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="RtlCompat,RtlSymmetry" />


    <TextView
        android:id="@+id/btn_google"
        android:onClick="google_ac"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login"
        android:drawablePadding="10dp"
        android:gravity="fill_vertical"
        android:paddingStart="80dp"
        android:text="@string/continue_with_google"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/social_google"
        app:layout_constraintEnd_toEndOf="@+id/btn_facebook"
        app:layout_constraintStart_toStartOf="@+id/btn_facebook"
        app:layout_constraintTop_toBottomOf="@+id/btn_facebook"
        tools:ignore="RtlCompat,RtlSymmetry" />

    <TextView
        android:id="@+id/btn_apple"
        android:onClick="apple_ac"
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_login"
        android:drawablePadding="10dp"
        android:gravity="fill_vertical"
        android:paddingStart="80dp"
        android:text="@string/continue_with_google"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/social_apple"
        app:layout_constraintStart_toStartOf="@+id/btn_google"
        app:layout_constraintTop_toBottomOf="@+id/btn_google"
        tools:ignore="RtlCompat,RtlSymmetry" />

    <Button
        android:id="@+id/nxt_btn"
        android:layout_width="380dp"
        android:layout_height="58dp"
        android:layout_marginBottom="80dp"
        android:onClick="next"
        android:shadowColor="#246BFD"
        android:shadowRadius="8"
        android:text="@string/next"
        app:circularflow_defaultRadius="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintCircleRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="151dp"
        android:layout_height="20dp"
        android:layout_marginStart="76dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#9E9E9E"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="689dp" />

    <TextView
        android:id="@+id/sign_up_btm_txt"
        android:layout_width="50dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="50dp"
        android:text="@string/sign_up"
        android:textColor="#246BFC"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="691dp" />

    <TextView
        android:layout_width="151dp"
        android:layout_height="20dp"
        android:layout_marginStart="76dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="#9E9E9E"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="689dp" />

    <TextView
        android:id="@+id/sign_up_bot_txt"
        android:layout_width="50dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="50dp"
        android:text="@string/sign_up"
        android:textColor="#246BFC"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="691dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="splash_img,textView,btn_facebook,btn_google,btn_apple,nxt_btn,sign_up_bot_txt" />
</androidx.constraintlayout.widget.ConstraintLayout>